fix reviwdog